2010-12-16  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr12327-1.patch: New.
	* README: Apply it.

2010-12-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-compress-rel-2.patch: New file. Replace ...
	* binutils-compress-rel-1.patch: This. Removed.
	* README: Likewise.

2010-12-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-3.patch: Removed.
	* README: Likewise.

2010-12-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-compress-rel-1.patch: New.
	* README: Apply it.

2010-12-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-3.patch: New file. Replace ...
	* binutils-init-mixed-2.patch: This. Removed.
	* README: Likewise.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-3.patch: Check lto_non_ir_object instead
	of lto_ir_object when warning about the unclaimed archive
	member with IR.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-2.patch: New file. Replace ...
	* binutils-init-mixed-1.patch: This. Removed.
	* README: Likewise.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-init-mixed-1.patch: New.
	* README: Apply it.

2010-12-13  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-3.patch: New file. Replace ...
	* binutils-lto-mixed-2.patch: This. Removed.
	* README: Likewise.

2010-12-12  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-2.patch: New file. Replace ...
	* binutils-lto-mixed-1.patch: This. Removed.
	* README: Likewise.

2010-12-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-1.patch: Initialize header.next to NULL.

2010-12-11  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-1.patch: New file. Replace ...
	* binutils-2stage-5.patch: This. Removed.
	* README: Likewise.

2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-5.patch: New file. Replace ...
	* binutils-2stage-4.patch: This. Removed.
	* README: Likewise.

2010-12-05  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-2stage-4.patch: New file. Replace ...
	* binutils-2stage-3.patch: This. Removed.